Wed Jun 21 13:35:37 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* _Really_ stopped referring to OmSettings.

Tue Jun 20 18:27:55 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Stop compiling OmSettings in, at least for now.

Tue Jun 20 15:51:00 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added a test for basic exception handling.

Tue Jun 20 14:53:28 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* The lex parser used for queries should no longer interfere
	  with other lexers.  (I was having problems in examples)

Tue Jun 20 14:49:54 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Portability fixes - network bits now stand a better chance
	  of compiling under Solaris.

Tue Jun 20 14:41:00 BST 2000 Olly Betts

	* PhrasePostList: added incomplete and disabled code for more
	  efficient implementation

	* added bindings/java/native/.cvsignore

Tue Jun 20 14:09:00 BST 2000 Olly Betts

	* apitest: TEST_EXPECTED_DOCS() changed to make use less verbose

Tue Jun 20 11:20:00 BST 2000 Olly Betts

	* apitest now tries to guess srcdir from argv[0] if it isn't in env

Tue Jun 20 10:31:00 BST 2000 Olly Betts

	* Removed NearOrPhrasePostList - code shared was negligible

Tue Jun 20 09:38:00 BST 2000 Olly Betts

	* Tweaked some FIXME comments

Mon Jun 19 18:26:50 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Some work towards getting the Java bindings into the make system.

Mon Jun 19 15:56:00 BST 2000 Olly Betts

	* Updated TODO

Mon Jun 19 15:46:00 BST 2000 Olly Betts

	* Tidied up near/phrase a bit

Mon Jun 19 14:48:00 BST 2000 Olly Betts

	* Fixed languages/porter/.cvsignore

Mon Jun 19 14:30:00 BST 2000 Olly Betts

	* Fixed various typos in ChangeLog and TODO

Mon Jun 19 14:09:00 BST 2000 Olly Betts

	* Improved near1 and phrase1 tests; fixed problems thrown up by more
	  demanding test cases.

Mon Jun 19 13:48:40 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>
