@@ -1,3 +1,8 @@
+Wed Jun 21 13:40:03 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>
+
+	* Stoped the "undefined reference to SocketServer type_info node"
+	  (or similar) linking errors with includetest.
+
 Wed Jun 21 13:35:37 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>
 
 	* _Really_ stopped referring to OmSettings.
